force-app/main/default/objects/Route_Plan__c/Route_Plan__c.object-meta.xml
<CustomObject>
    <label>Route Plan</label>
    <nameField>
        <label>Route Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>