force-app/main/default/objects/Route_Plan__c/fields/Activity_Done__c.field-meta.xml
<CustomField>
    <fullName>Activity_Done__c</fullName>
    <label>Activity Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rides</fullName>
            </value>
            <value>
                <fullName>RWA</fullName>
            </value>
            <value>
                <fullName>Canopies</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>