force-app/main/default/objects/Route_Plan__c/fields/Ad_hoc_visit__c.field-meta.xml
<CustomField>
    <fullName>Ad_hoc_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad hoc visit</label>
    <type>Checkbox</type>
</CustomField>