force-app/main/default/objects/Route_Plan__c/fields/Beat_Group__c.field-meta.xml
<CustomField>
    <fullName>Beat_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Group</label>
    <referenceTo>Beat_Matrix__c</referenceTo>
    <relationshipLabel>Route Plan</relationshipLabel>
    <relationshipName>Route_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>