force-app/main/default/objects/Route_Plan__c/fields/CheckInDateTime__c.field-meta.xml
<CustomField>
    <fullName>CheckInDateTime__c</fullName>
    <label>CheckInDateTime</label>
    <type>DateTime</type>
</CustomField>