force-app/main/default/objects/Route_Plan__c/fields/CheckInLocation__c.field-meta.xml
<CustomField>
    <fullName>CheckInLocation__c</fullName>
    <label>CheckInLocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>