force-app/main/default/objects/Route_Plan__c/fields/CheckOutDateTime__c.field-meta.xml
<CustomField>
    <fullName>CheckOutDateTime__c</fullName>
    <label>CheckOutDateTime</label>
    <type>DateTime</type>
</CustomField>