force-app/main/default/objects/Route_Plan__c/fields/CheckOutLocation__c.field-meta.xml
<CustomField>
    <fullName>CheckOutLocation__c</fullName>
    <label>CheckOutLocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>