force-app/main/default/objects/Route_Plan__c/fields/Competition_MIS_at_the_store__c.field-meta.xml
<CustomField>
    <fullName>Competition_MIS_at_the_store__c</fullName>
    <label>Competition MIS at the store</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>