force-app/main/default/objects/Route_Plan__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Route Plan</relationshipLabel>
    <relationshipName>Route_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>