force-app/main/default/objects/Route_Plan__c/fields/Deviation_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Deviation_approval_status__c</fullName>
    <label>Deviation approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Submit for approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>