force-app/main/default/objects/Route_Plan__c/fields/LocationDistance__c.field-meta.xml
<CustomField>
    <fullName>LocationDistance__c</fullName>
    <label>Location distance (meter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>