force-app/main/default/objects/Route_Plan__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>January</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>February</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>March</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>May</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>June</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>July</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>August</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>September</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>October</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>November</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>December</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>