force-app/main/default/objects/Route_Plan__c/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <label>Competitor Product</label>
    <type>TextArea</type>
</CustomField>