force-app/main/default/objects/Route_Plan__c/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <label>Any Issue Facing with Product &amp; Service</label>
    <type>TextArea</type>
</CustomField>