force-app/main/default/objects/Route_Plan__c/fields/Question3__c.field-meta.xml
<CustomField>
    <fullName>Question3__c</fullName>
    <label>Competitor Details</label>
    <type>TextArea</type>
</CustomField>