force-app/main/default/objects/Route_Plan__c/fields/Route_Plan__c.field-meta.xml
<CustomField>
    <fullName>Route_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Plan</label>
    <referenceTo>Route_Plan__c</referenceTo>
    <relationshipLabel>Route Plan Activity</relationshipLabel>
    <relationshipName>Route_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>