force-app/main/default/objects/Route_Plan__c/fields/Training_to_mechanic_owner__c.field-meta.xml
<CustomField>
    <fullName>Training_to_mechanic_owner__c</fullName>
    <label>Training to mechanic/owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>