force-app/main/default/objects/Route_Plan__c/fields/Type_of_store__c.field-meta.xml
<CustomField>
    <fullName>Type_of_store__c</fullName>
    <label>Type of store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EBO</fullName>
            </value>
            <value>
                <fullName>MBO</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Sub Dealer</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>