force-app/main/default/objects/Route_Plan__c/listViews/Route_Plan.listView-meta.xml
<ListView>
    <fullName>Route_Plan</fullName>
    <columns>NAME</columns>
    <columns>ASM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Route_Plan__c.Month</value>
    </filters>
    <label>Route Plan</label>
</ListView>