force-app/main/default/objects/Route_Plan__c/listViews/Route_Plan_Activity.listView-meta.xml
<ListView>
    <fullName>Route_Plan_Activity</fullName>
    <columns>NAME</columns>
    <columns>Beat_Group__c</columns>
    <columns>Dealer_Name__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Route_Plan__c</columns>
    <columns>ASM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Route_Plan__c.Activity</value>
    </filters>
    <label>Route Plan Activity</label>
</ListView>